# drawrs

./: Cargo.toml  README.md
src/: choices.rs  impls.rs  lib.rs  main.rs  models.rs  picoseconds.rs
src/choices/: drawing.rs  mod.rs
src/drawing/: app.rs  components.rs  mod.rs  pathfinding.rs
src/image_processing/: conversion.rs  mod.rs  scaling.rs
src/utils/: duration.rs  geometry.rs  mod.rs
