[package]
name = "drawrs"
version = "0.1.0"
edition = "2021"
description = "A tracing engine for Rust"
license = "MIT"
repository = "https://github.com/thebearodactyl/drawrs"
readme = "README.md"
keywords = ["tracing", "drawing", "inputsim"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.96"
device_query = "3.0"
enigo = "0.1.3"
image = "0.25"
native-dialog = "0.7"
num-traits = "0.2.19"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
