[package]
name = "drawrs"
version = "0.1.0"
edition = "2021"
description = "A tracing engine for Rust"
license = "MIT"
repository = "https://github.com/thebearodactyl/drawrs"
readme = "README.md"
keywords = ["tracing", "drawing", "inputsim"]
categories = ["command-line-utilities"]

[dependencies]
device_query = "3.0"
enigo = "0.1.3"
image = "0.25"
indicatif = { version = "0.17.11", features = ["rayon"] }
inquire = "0.7.5"
inquiry = "0.1.0"
native-dialog = "0.7"
rand = "0.9.1"
rayon = "1.10"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
