[package]
name = "drawrs"
version = "0.1.1"
edition = "2021"
description = "A tracing engine for Rust"
license = "MIT"
repository = "https://github.com/thebearodactyl/drawrs"
homepage = "https://github.com/thebearodactyl/drawrs"
readme = "README.md"
keywords = ["tracing", "drawing", "inputsim"]
categories = ["command-line-utilities"]

[dependencies]
device_query = "4.0.0"
enigo = "0.5.0"
image = "0.25"
imageproc = "0.25.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
inquire = "0.7.5"
inquiry = "0.1.0"
native-dialog = "0.9"
rand = "0.9.1"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
